<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    tools:context="com.kass.khaddamni.khaddamni.ChangePasswordActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayoutEmailLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/textEditoldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/grey_0" />
            <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/textEditnewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/textEditConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_passwordConfirm"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/buttonFavourite"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_0"
            android:layout_marginTop="2dp"
            android:background="@drawable/login_btn"
            android:onClick="buttonConfirm"
            android:text="@string/confirm"
            android:layout_weight="1"


            />
        <Button
            android:id="@+id/buttonApplied"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_0"
            android:layout_marginTop="2dp"
            android:background="@drawable/login_btn"
            android:onClick="buttonBack"
            android:text="@string/back"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            />


    </LinearLayout>

    </LinearLayout>






</RelativeLayout>
