<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/app_primary"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="45dp"
                android:clickable="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textViewDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_decription"
                android:textColor="@color/grey_600"
                android:layout_below="@+id/textViewLogo"
                android:layout_alignRight="@+id/textViewLogo"
                android:layout_alignEnd="@+id/textViewLogo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutEmailLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/textViewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/noaccount_background"
                android:gravity="center"
                android:textColor="@color/grey_1000"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:layout_marginTop="2dp"
                android:paddingLeft="2dp"
                android:paddingTop="15dp"
                android:text="@string/forgot_password"
                android:onClick="buttonLoginClicked"

                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/grey_1000"
                android:layout_marginTop="2dp"
                android:background="@drawable/noaccount_background"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingRight="2dp"
                android:paddingTop="15dp"
                android:text="@string/create_account"
                android:clickable="true"
                android:onClick="buttonRegisterClicked"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>


        <!--
        <Button
            android:id="@+id/buttonEmailSignIn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_0"
            android:layout_marginTop="2dp"
            android:background="@drawable/login_btn"
            android:onClick="buttonSignInClicked"
            android:text="@string/action_sign_in"
            />
            -->

        <com.kass.khaddamni.khaddamni.widget.LoadingButton
            android:id="@+id/loading_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            app:text="SIGN IN"
            />

    </LinearLayout>

</LinearLayout>
