<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:gravity="center_horizontal"
android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    tools:context=".RegisterActivity">

<ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/app_primary"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="45dp"
                android:clickable="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/txt_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_decription"
                android:textColor="@color/grey_600"
                android:layout_below="@+id/txt_logo"
                android:layout_alignRight="@+id/txt_logo"
                android:layout_alignEnd="@+id/txt_logo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="date of birth"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:padding="8dp"

                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/editTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="phone number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"

                    android:textColorHint="@color/grey_0" />
                <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_passwordConfirm"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_0" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_0"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn"
                android:text="@string/action_register"
                android:onClick="buttonRegisterClicked"
                />



        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>



